--- a/vistas/vistaVentanaConfirmacion.html
+++ b/vistas/vistaVentanaConfirmacion.html
@@ -1,6 +1,3 @@
-<?php
-
-?>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,27 +10,19 @@
 <body>
    
 <!-- clase container -->
-<div class="container">
+<div class="container d-flex flex-column justify-content-center align-items-center vh-100">
     
     <!-- fila búsqueda -->
     <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">           
-            <label for="libro">Búsqueda</label>
-            <input type="text" id="libro" name="libro" required>
-            <input type="button" id="miBoton" value="¡Vamos!"><br><br>
+            <h5 class="row justify-content-center align-self-center">¡El libro se ha añadido correctamente!</h5>            
         </div>       
-    </div>   
-
-    <div class="row" id="textoResultados">
-        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">   
-            <h4>Resultados</h4>
-        </div>
-    </div><br><br>    
-    
-    <div id="tarjeta">    
-    <!-- Aquí va la tarjeta con el libro -->    
     </div>
-
+    <div class="row w-100 text-center mt-3" id="botones">
+        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">   
+            <button type="button" class="btn btn-primary">Volver</button>
+        </div>
+    </div> 
 
 </div> <!--Cierre container -->
 
