--- a/vistas/ventanasEmergentes/vistaVentanaError.html
+++ b/vistas/ventanasEmergentes/vistaVentanaError.html
@@ -1,39 +1,36 @@
-<?php
-
-?>
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="js/vista_buscarLibros.js"></script>
+    <script src="../js/vista_buscarLibros.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>busqueda de libros</title>
 </head>
 <body>
    
 <!-- clase container -->
-<div class="container">
+<div class="container d-flex flex-column justify-content-center align-items-center vh-100">
     
     <!-- fila búsqueda -->
     <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">           
-            <label for="libro">Búsqueda</label>
-            <input type="text" id="libro" name="libro" required>
-            <input type="button" id="miBoton" value="¡Vamos!"><br><br>
+            <h4 class="row justify-content-center align-self-center">¡Error desconocido! Contacte con el administrador</h4>            
         </div>       
-    </div>   
-
-    <div class="row" id="textoResultados">
-        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">   
-            <h4>Resultados</h4>
-        </div>
-    </div><br><br>    
-    
-    <div id="tarjeta">    
-    <!-- Aquí va la tarjeta con el libro -->    
     </div>
+    <div class="row w-100 text-center mt-3" id="botones">
+        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">   
+            <button type="button" id="boton" class="btn btn-primary">Cerrar</button>
+        </div>
+    </div> 
 
+    <!-- Script para cerrar ventana pulsando el botón-->
+    <script>
+        let boton = document.getElementById("boton");
+        boton.addEventListener("click", function(){
+        window.close();
+        })
+    </script>
 
 </div> <!--Cierre container -->
 
