--- a/vistas/ventanasEmergentes/vistaVentanaConfirmacion.html
+++ b/vistas/ventanasEmergentes/vistaVentanaConfirmacion.html
@@ -15,7 +15,7 @@
     <!-- fila búsqueda -->
     <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">           
-            <h5 class="row justify-content-center align-self-center">¡El libro se ha añadido correctamente!</h5>            
+            <h5 class="row justify-content-center align-self-center" id="mensaje"></h5>            
         </div>       
     </div>
     <div class="row w-100 text-center mt-3" id="botones">
@@ -29,7 +29,8 @@
         let boton = document.getElementById("boton");
         boton.addEventListener("click", function(){
         window.close();
-        })
+        });       
+
     </script>
 
 </div> <!--Cierre container -->
