--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                 <div class="collapse navbar-collapse justify-content-end" id="opciones">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#login">Login</a>
+                            <a class="nav-link" href="./vistas/login.php">Login</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#registrar">Registrar</a>
+                            <a class="nav-link" href="./vistas/registro.php">Registrar</a>
                         </li>
                     </ul>
                 </div>
